[package]
name = "pwm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.9.0-alpha.1"
rand_chacha = "0.9.0-alpha.1"
ring = { version = "0.17.8", features = ["std"] }
hex = "0.4.3"
log = "0.4.21"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
dirs = "5.0.1"
crossterm = "0.27.0"
arboard = "3.4.0"
rpassword = "7.3.1"
